<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnbatman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MostrarBatman"
            android:text="@string/Batman" />

        <Button
            android:id="@+id/btnsuperman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MostrarSuperman"
            android:text="@string/Superman" />

        <Button
            android:id="@+id/btnlanterna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EnviarDadosemail"
            android:text="@string/Lanterna" />

        <Button
            android:id="@+id/btnflash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MostrarFlash"
            android:text="@string/Flash" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>